src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A11.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A11 {
  class C1 {
    String a = 1;
    int b = "str";
  }  
}